--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,7 @@ header {
   color: #3d3d3d;
   width: 100%;
   margin: 0px;
+  margin-top: -10px;
   padding: 0px;
   text-align: center;
   text-shadow: 4px 4px #33ad5c;
@@ -67,10 +68,10 @@ footer {
 
 /*Main*/
 #pitch-pipe {
-  margin-top: 80px;
+  margin-top: 60px;
   position: relative;
-  width: 450px;
-  height: 450px;
+  width: 400px;
+  height: 400px;
   margin-left: auto;
   margin-right: auto;
 }
@@ -139,7 +140,7 @@ footer {
   z-index: 1;
   text-align: center;
   font-family: Helvetica, sans-serif;
-  font-size: 100px;
+  font-size: 90px;
   font-weight: bold;
   line-height: 0;
   color: #33ad5c;
@@ -147,6 +148,11 @@ footer {
 
 #output b {
   font-size: 0.5em;
+}
+
+/******Footer******/
+#donate {
+  padding: 1px;
 }
 
 /******Responsive Sizes******/
@@ -168,6 +174,10 @@ footer {
 
   footer {
     font-size: 24px;
+  }
+
+  #donate {
+    margin-bottom: -6px;
   }
 }
 @media screen and (min-width: 320px) and (max-width: 568px) and (orientation: landscape), screen and (min-width: 320px) and (max-width: 568px) and (orientation: landscape) and (-webkit-min-device-pixel-ratio: 1.5), screen and (min-width: 320px) and (max-width: 568px) and (orientation: landscape) and (min-device-pixel-ratio: 1.5) {
@@ -192,7 +202,7 @@ footer {
   }
 
   footer {
-    font-size: 12px;
+    font-size: 6px;
   }
 }
 /*iPhone 5 (placement)*/
@@ -209,6 +219,86 @@ footer {
 
   #output {
     font-size: 48px;
+  }
+
+  footer {
+    font-size: 24px;
+  }
+}
+/*Mini Tablet Landscape*/
+@media screen and (min-width: 569px) and (orientation: landscape), screen and (min-width: 569px) and (orientation: landscape) and (-webkit-min-device-pixel-ratio: 1.5), screen and (min-width: 569px) and (orientation: landscape) and (min-device-pixel-ratio: 1.5) {
+  header {
+    width: 20%;
+    float: left;
+    margin-top: 8%;
+    margin-left: 15%;
+    font-size: 24px;
+    text-align: left;
+  }
+
+  #pitch-pipe {
+    float: right;
+    margin-top: 10%;
+    margin-right: 17%;
+    height: 250px;
+    width: 250px;
+  }
+
+  #output {
+    font-size: 56px;
+  }
+
+  footer {
+    font-size: 24px;
+  }
+}
+/*Small Tablet Landscape*/
+@media screen and (min-width: 768px) and (orientation: landscape), screen and (min-width: 768px) and (orientation: landscape) and (-webkit-min-device-pixel-ratio: 1.5), screen and (min-width: 768px) and (orientation: landscape) and (min-device-pixel-ratio: 1.5) {
+  header {
+    width: 20%;
+    float: left;
+    margin-top: 8%;
+    margin-left: 15%;
+    font-size: 36px;
+    text-align: left;
+  }
+
+  #pitch-pipe {
+    float: right;
+    margin-top: 10%;
+    margin-right: 12%;
+    height: 350px;
+    width: 350px;
+  }
+
+  #output {
+    font-size: 80px;
+  }
+
+  footer {
+    font-size: 24px;
+  }
+}
+/*Table Landscape*/
+@media screen and (min-width: 1024px) and (orientation: landscape), screen and (min-width: 1024px) and (orientation: landscape) and (-webkit-min-device-pixel-ratio: 1.5), screen and (min-width: 1024px) and (orientation: landscape) and (min-device-pixel-ratio: 1.5) {
+  header {
+    width: 20%;
+    float: left;
+    margin-top: 8%;
+    margin-left: 7%;
+    font-size: 64px;
+  }
+
+  #pitch-pipe {
+    float: right;
+    margin-top: 10%;
+    margin-right: 12%;
+    height: 450px;
+    width: 450px;
+  }
+
+  #output {
+    font-size: 100px;
   }
 
   footer {
