--- a/css/style.scss
+++ b/css/style.scss
@@ -8,7 +8,7 @@ $sel-color: #000;
 $sel-bg-color: red;
 
 /*Dimensions*/
-$pitch-pipe-margin: 80px;
+
 
 /******General******/
 
@@ -48,6 +48,7 @@ header {
   color: $secondary-color;
   width: 100%;
   margin: 0px;
+  margin-top: -10px;
   padding: 0px;
   text-align: center;
   text-shadow: 4px 4px $primary-color;
@@ -80,10 +81,10 @@ footer {
 }
 /*Main*/
 #pitch-pipe {
-  margin-top: $pitch-pipe-margin;
+  margin-top: 60px;
   position: relative;
-  width: 450px;
-  height: 450px;
+  width: 400px;
+  height: 400px;
   margin-left: auto;
   margin-right: auto;
 }
@@ -151,7 +152,7 @@ footer {
   z-index: 1;
   text-align: center;
   font-family: Helvetica, sans-serif;
-  font-size: 100px;
+  font-size: 90px;
   font-weight: bold;
   line-height: 0;
   color: $primary-color;
@@ -159,6 +160,12 @@ footer {
 
 #output b {
   font-size: 0.5em;
+}
+
+/******Footer******/
+#donate {
+  padding: 1px;
+
 }
 /******Responsive Sizes******/
 
@@ -178,6 +185,9 @@ screen and (min-width: 320px) and (max-width: 568px) and (orientation: portrait)
   }
   footer {
     font-size: 24px;
+  }
+  #donate {
+    margin-bottom: -6px;
   }
 }
 
@@ -203,7 +213,7 @@ screen and (min-width: 320px) and (max-width: 568px) and (orientation: landscape
     font-size: 38px;
   }
   footer {
-    font-size: 12px;
+    font-size: 6px;
   }
 }
 
@@ -226,3 +236,86 @@ screen and (min-width: 320px) and (max-width: 568px) and (orientation: portrait)
     font-size: 24px;
   }
 }
+
+/*Mini Tablet Landscape*/
+@media
+screen and (min-width: 569px) and (orientation: landscape),
+screen and (min-width: 569px) and (orientation: landscape) and (-webkit-min-device-pixel-ratio: 1.5),
+screen and (min-width: 569px) and (orientation: landscape) and (min-device-pixel-ratio: 1.5)  {
+  header {
+    width: 20%;
+    float: left;
+    margin-top: 8%;
+    margin-left: 15%;
+    font-size: 24px;
+    text-align: left;
+  }
+  #pitch-pipe {
+    float: right;
+    margin-top: 10%;
+    margin-right: 17%;
+    height: 250px;
+    width: 250px;
+  }
+  #output {
+    font-size: 56px;
+  }
+  footer {
+    font-size: 24px;
+  }
+}
+
+/*Small Tablet Landscape*/
+@media
+screen and (min-width: 768px) and (orientation: landscape),
+screen and (min-width: 768px) and (orientation: landscape) and (-webkit-min-device-pixel-ratio: 1.5),
+screen and (min-width: 768px) and (orientation: landscape) and (min-device-pixel-ratio: 1.5)  {
+  header {
+    width: 20%;
+    float: left;
+    margin-top: 8%;
+    margin-left: 15%;
+    font-size: 36px;
+    text-align: left;
+  }
+  #pitch-pipe {
+    float: right;
+    margin-top: 10%;
+    margin-right: 12%;
+    height: 350px;
+    width: 350px;
+  }
+  #output {
+    font-size: 80px;
+  }
+  footer {
+    font-size: 24px;
+  }
+}
+
+ /*Table Landscape*/
+ @media
+ screen and (min-width: 1024px) and (orientation: landscape),
+ screen and (min-width: 1024px) and (orientation: landscape) and (-webkit-min-device-pixel-ratio: 1.5),
+ screen and (min-width: 1024px) and (orientation: landscape) and (min-device-pixel-ratio: 1.5)  {
+   header {
+     width: 20%;
+     float: left;
+     margin-top: 8%;
+     margin-left: 7%;
+     font-size: 64px;
+   }
+   #pitch-pipe {
+     float: right;
+     margin-top: 10%;
+     margin-right: 12%;
+     height: 450px;
+     width: 450px;
+   }
+   #output {
+     font-size: 100px;
+   }
+   footer {
+     font-size: 24px;
+   }
+ }
