--- a/css/style.css
+++ b/css/style.css
@@ -156,6 +156,9 @@ footer {
 }
 
 /******Responsive Sizes******/
+/*****
+PHONES
+*****/
 /*iPhone 3 and 4*/
 @media screen and (min-width: 320px) and (max-width: 568px) and (orientation: portrait) {
   header {
@@ -202,11 +205,11 @@ footer {
   }
 
   footer {
-    font-size: 6px;
+    font-size: 12px;
   }
 }
 /*iPhone 5 (placement)*/
-@media screen and (min-width: 320px) and (max-width: 568px) and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 1.5), screen and (min-width: 320px) and (max-width: 568px) and (orientation: portrait) and (min-device-pixel-ratio: 1.5) {
+@media screen and (min-width: 320px) and (max-width: 568px) and (orientation: portrait), screen and (min-width: 320px) and (max-width: 568px) and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 1.5), screen and (min-width: 320px) and (max-width: 568px) and (orientation: portrait) and (min-device-pixel-ratio: 1.5) {
   header {
     font-size: 24px;
   }
@@ -225,8 +228,11 @@ footer {
     font-size: 24px;
   }
 }
+/*****
+MINI TABLETS
+*****/
 /*Mini Tablet Landscape*/
-@media screen and (min-width: 569px) and (orientation: landscape), screen and (min-width: 569px) and (orientation: landscape) and (-webkit-min-device-pixel-ratio: 1.5), screen and (min-width: 569px) and (orientation: landscape) and (min-device-pixel-ratio: 1.5) {
+@media screen and (min-width: 569px) and (max-width: 767px) and (orientation: landscape), screen and (min-width: 569px) and (max-width: 767px) and (orientation: landscape) and (-webkit-min-device-pixel-ratio: 1.5), screen and (min-width: 569px) and (max-width: 767px) and (orientation: landscape) and (min-device-pixel-ratio: 1.5) {
   header {
     width: 20%;
     float: left;
@@ -252,8 +258,11 @@ footer {
     font-size: 24px;
   }
 }
-/*Tablet*/
-@media screen and (min-width: 768px) and (orientation: portrait), screen and (min-width: 768px) and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 1.5), screen and (min-width: 768px) and (orientation: portrait) and (min-device-pixel-ratio: 1.5) {
+/*****
+TABLETS
+*****/
+/*Tablet Portrait*/
+@media screen and (min-width: 768px) and (max-width: 1024px) and (orientation: portrait), screen and (min-width: 768px) and (max-width: 1024px) and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 1.5), screen and (min-width: 768px) and (max-width: 1024px) and (orientation: portrait) and (min-device-pixel-ratio: 1.5) {
   header {
     font-size: 48px;
     margin-top: -50px;
@@ -269,7 +278,8 @@ footer {
     font-size: 124px;
   }
 }
-@media screen and (min-width: 768px) and (orientation: landscape), screen and (min-width: 768px) and (orientation: landscape) and (-webkit-min-device-pixel-ratio: 1.5), screen and (min-width: 768px) and (orientation: landscape) and (min-device-pixel-ratio: 1.5) {
+/*Tablet Landscape*/
+@media screen and (min-width: 768px) and (max-width: 1024px) and (orientation: landscape), screen and (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) and (-webkit-min-device-pixel-ratio: 1.5), screen and (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) and (min-device-pixel-ratio: 1.5) {
   header {
     width: 20%;
     float: left;
@@ -283,41 +293,35 @@ footer {
     float: right;
     margin-top: 10%;
     margin-right: 12%;
-    height: 350px;
-    width: 350px;
+    height: 400px;
+    width: 400px;
   }
 
   #output {
-    font-size: 80px;
+    font-size: 86px;
   }
 
   footer {
     font-size: 24px;
   }
 }
-/*Desktop Landscape*/
-@media screen and (min-width: 1024px) and (orientation: landscape), screen and (min-width: 1024px) and (orientation: landscape) and (-webkit-min-device-pixel-ratio: 1.5), screen and (min-width: 1024px) and (orientation: landscape) and (min-device-pixel-ratio: 1.5) {
+/*****
+DESKTOP
+*****/
+/*Desktop*/
+@media screen and (min-width: 1025px), screen and (min-width: 1025px) and (-webkit-min-device-pixel-ratio: 1.5), screen and (min-width: 1025px) and (min-device-pixel-ratio: 1.5) {
   header {
-    width: 20%;
-    float: left;
-    margin-top: 8%;
-    margin-left: 7%;
-    font-size: 64px;
+    font-size: 48px;
+    margin-top: -50px;
   }
 
   #pitch-pipe {
-    float: right;
-    margin-top: 10%;
-    margin-right: 12%;
-    height: 450px;
-    width: 450px;
+    width: 560px;
+    height: 560px;
+    margin-top: 80px;
   }
 
   #output {
-    font-size: 100px;
-  }
-
-  footer {
-    font-size: 24px;
+    font-size: 124px;
   }
 }
