--- a/css/style.scss
+++ b/css/style.scss
@@ -169,6 +169,10 @@ footer {
 }
 /******Responsive Sizes******/
 
+/*****
+PHONES
+*****/
+
 /*iPhone 3 and 4*/
 @media
 screen and (min-width: 320px) and (max-width: 568px) and (orientation: portrait) {
@@ -213,12 +217,13 @@ screen and (min-width: 320px) and (max-width: 568px) and (orientation: landscape
     font-size: 38px;
   }
   footer {
-    font-size: 6px;
+    font-size: 12px;
   }
 }
 
 /*iPhone 5 (placement)*/
 @media
+screen and (min-width: 320px) and (max-width: 568px) and (orientation: portrait),
 screen and (min-width: 320px) and (max-width: 568px) and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 1.5),
 screen and (min-width: 320px) and (max-width: 568px) and (orientation: portrait) and (min-device-pixel-ratio: 1.5)  {
   header {
@@ -237,11 +242,15 @@ screen and (min-width: 320px) and (max-width: 568px) and (orientation: portrait)
   }
 }
 
+/*****
+MINI TABLETS
+*****/
+
 /*Mini Tablet Landscape*/
 @media
-screen and (min-width: 569px) and (orientation: landscape),
-screen and (min-width: 569px) and (orientation: landscape) and (-webkit-min-device-pixel-ratio: 1.5),
-screen and (min-width: 569px) and (orientation: landscape) and (min-device-pixel-ratio: 1.5)  {
+screen and (min-width: 569px) and (max-width: 767px) and (orientation: landscape),
+screen and (min-width: 569px) and (max-width: 767px) and (orientation: landscape) and (-webkit-min-device-pixel-ratio: 1.5),
+screen and (min-width: 569px) and (max-width: 767px) and (orientation: landscape) and (min-device-pixel-ratio: 1.5)  {
   header {
     width: 20%;
     float: left;
@@ -265,11 +274,67 @@ screen and (min-width: 569px) and (orientation: landscape) and (min-device-pixel
   }
 }
 
-/*Tablet*/
+/*****
+TABLETS
+*****/
+
+/*Tablet Portrait*/
 @media
-screen and (min-width: 768px) and (orientation: portrait),
-screen and (min-width: 768px) and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 1.5),
-screen and (min-width: 768px) and (orientation: portrait) and (min-device-pixel-ratio: 1.5)  {
+screen and (min-width: 768px) and (max-width: 1024px) and (orientation: portrait),
+screen and (min-width: 768px) and (max-width: 1024px) and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 1.5),
+screen and (min-width: 768px) and (max-width: 1024px) and (orientation: portrait) and (min-device-pixel-ratio: 1.5)  {
+  header {
+    font-size: 48px;
+    margin-top: -50px;
+  }
+  #pitch-pipe {
+    width: 560px;
+    height: 560px;
+    margin-top: 80px;
+  }
+  #output {
+    font-size: 124px;
+  }
+  footer {
+  }
+}
+/*Tablet Landscape*/
+@media
+screen and (min-width: 768px) and (max-width: 1024px) and (orientation: landscape),
+screen and (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) and (-webkit-min-device-pixel-ratio: 1.5),
+screen and (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) and (min-device-pixel-ratio: 1.5)  {
+  header {
+    width: 20%;
+    float: left;
+    margin-top: 8%;
+    margin-left: 15%;
+    font-size: 36px;
+    text-align: left;
+  }
+  #pitch-pipe {
+    float: right;
+    margin-top: 10%;
+    margin-right: 12%;
+    height: 400px;
+    width: 400px;
+  }
+  #output {
+    font-size: 86px;
+  }
+  footer {
+    font-size: 24px;
+  }
+}
+
+/*****
+DESKTOP
+*****/
+
+/*Desktop*/
+@media
+screen and (min-width: 1025px),
+screen and (min-width: 1025px) and (-webkit-min-device-pixel-ratio: 1.5),
+screen and (min-width: 1025px) and (min-device-pixel-ratio: 1.5)  {
   header {
     font-size: 48px;
     margin-top: -50px;
@@ -288,56 +353,3 @@ screen and (min-width: 768px) and (orientation: portrait) and (min-device-pixel-
 
   }
 }
-@media
-screen and (min-width: 768px) and (orientation: landscape),
-screen and (min-width: 768px) and (orientation: landscape) and (-webkit-min-device-pixel-ratio: 1.5),
-screen and (min-width: 768px) and (orientation: landscape) and (min-device-pixel-ratio: 1.5)  {
-  header {
-    width: 20%;
-    float: left;
-    margin-top: 8%;
-    margin-left: 15%;
-    font-size: 36px;
-    text-align: left;
-  }
-  #pitch-pipe {
-    float: right;
-    margin-top: 10%;
-    margin-right: 12%;
-    height: 350px;
-    width: 350px;
-  }
-  #output {
-    font-size: 80px;
-  }
-  footer {
-    font-size: 24px;
-  }
-}
-
- /*Desktop Landscape*/
- @media
- screen and (min-width: 1024px) and (orientation: landscape),
- screen and (min-width: 1024px) and (orientation: landscape) and (-webkit-min-device-pixel-ratio: 1.5),
- screen and (min-width: 1024px) and (orientation: landscape) and (min-device-pixel-ratio: 1.5)  {
-   header {
-     width: 20%;
-     float: left;
-     margin-top: 8%;
-     margin-left: 7%;
-     font-size: 64px;
-   }
-   #pitch-pipe {
-     float: right;
-     margin-top: 10%;
-     margin-right: 12%;
-     height: 450px;
-     width: 450px;
-   }
-   #output {
-     font-size: 100px;
-   }
-   footer {
-     font-size: 24px;
-   }
- }
